fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: farahdiouani/fastapi-postgres-crud:latest  
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi
spec:
  type: NodePort  
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
