ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi

spec:
  rules:
    - host: example.net
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: fastapi
                port:
                  number: 80
